--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,19 +1,19 @@
 server {
-    listen 8080;
-    server_name localhost;
+    listen 8080
+    serverNames localhost
 
     location / {
-        allowed_methods GET POST
-        root /example_files;
-        index index.html;
+        allowedMethods GET POST
+        root /example_files
+        index index.html
     }
 
     location /old-page {
-        return 301 http://google.com;
+        return 301 http://google.com
     }
 
     location /public {
-        root /example_files;
-        autoindex on;
+        root /example_files
+        autoindex on
     }
 }
