improve parsing logic

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -17,3 +17,22 @@ server {
         autoindex on
     }
 }
+server {
+    listen 9090
+    serverNames example.com wp.pl
+
+    location /diff {
+        allowedMethods GET POST
+        root /ex/diff
+        index index.html
+    }
+
+    location /diff2 {
+        return 301 http://google.com
+    }
+
+    location /diff3 {
+        root /exam
+        autoindex on
+    }
+}
