add support for multiple ports to Config and integrate config in main

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8080
+    listen 8080 8082 8083
     serverNames localhost
 
     location / {
@@ -18,7 +18,26 @@ server {
     }
 }
 server {
-    listen 9090
+    listen 8081
+    serverNames localhost
+
+    location / {
+        allowedMethods GET POST
+        root /example_files
+        index index.html
+    }
+
+    location /old-page {
+        return 301 http://google.com
+    }
+
+    location /public {
+        root /example_files
+        autoindex on
+    }
+}
+server {
+    listen 8082
     serverNames example.com wp.pl
 
     location /diff {
