add configuration validation to Config class

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,6 +1,10 @@
 server {
     listen 8080 8082 8083
+    host 127.0.0.1
     serverNames localhost
+    root /
+    autoindex off
+    allowedMethods GET POST
 
     location / {
         allowedMethods GET POST
@@ -17,6 +21,7 @@ server {
         autoindex on
     }
 }
+
 server {
     listen 8081
     serverNames localhost
@@ -36,6 +41,7 @@ server {
         autoindex on
     }
 }
+
 server {
     listen 8082
     serverNames example.com wp.pl
