feat: implement host:port pairs instead of just ports in Server and Config

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,6 +1,6 @@
 server {
-    listen 8080 8082 8083
-    host 127.0.0.1
+    listen 127.0.0.1:8080
+    listen 0.0.0.0:8082
     serverNames localhost
     root /
     autoindex off
@@ -23,7 +23,7 @@ server {
 }
 
 server {
-    listen 8081
+    listen 0.0.0.0:8081
     serverNames localhost
 
     location / {
@@ -43,7 +43,7 @@ server {
 }
 
 server {
-    listen 8082
+    listen localhost:8084
     serverNames example.com wp.pl
 
     location /diff {
