feat: implement cgi extensions and path in Config

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -5,11 +5,13 @@ server {
     root /
     autoindex off
     allowedMethods GET POST
+    cgiPath /path/to/python
 
     location / {
         allowedMethods GET POST
         root /example_files
         index index.html
+        cgiAllowedExtensions .py
     }
 
     location /old-page {
