feat: add default error webpage

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -7,10 +7,15 @@ server {
     allowedMethods GET POST
     cgiPath /path/to/python
 
-    location / {
+    location /example_files/ {
         allowedMethods GET POST
         root /example_files
         index index.html
+        cgiAllowedExtensions .py
+    }
+
+    location / {
+        allowedMethods GET POST
         cgiAllowedExtensions .py
     }
 
