feat: implement handling of custom error pages

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,11 +1,13 @@
 server {
     listen 127.0.0.1:8080
     listen 0.0.0.0:8082
-    serverNames localhost
+    serverNames 127.0.0.1
     root /
     autoindex off
     allowedMethods GET POST
     cgiPath /path/to/python
+    errorPage 404 example_files/custom_errpages/404.html
+    errorPage 405 example_files/custom_errpages/405.html
 
     location /example_files/ {
         allowedMethods GET POST
