feat: add working routing based on root

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -6,27 +6,28 @@ server {
     autoindex off
     allowedMethods GET POST
     cgiPath /path/to/python
-    errorPage 404 example_files/custom_errpages/404.html
     errorPage 405 example_files/custom_errpages/405.html
 
     location /example_files/ {
         allowedMethods GET POST
-        root /example_files
+        root /example_files/
         index index.html
         cgiAllowedExtensions .py
+        autoindex on
     }
 
     location / {
         allowedMethods GET POST
         cgiAllowedExtensions .py
+        root /example_files/
     }
 
-    location /old-page {
+    location /old-page/ {
         return 301 http://google.com
     }
 
-    location /public {
-        root /example_files
+    location /public/ {
+        root /example_files/
         autoindex on
     }
 }
