feat: add MaxBodySize to Config (WIP)

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -7,6 +7,7 @@ server {
     allowedMethods GET POST
     cgiPath /path/to/python
     errorPage 405 example_files/custom_errpages/405.html
+    errorPage 404 example_files/custom_errpages/404.html
 
     location /example_files/ {
         allowedMethods GET POST
