--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -3,7 +3,7 @@ server {
     listen 0.0.0.0:8082
     serverNames 127.0.0.1
     root /
-    autoindex off
+    autoindex on
     allowedMethods GET POST
     cgiPath /path/to/python
     errorPage 405 example_files/custom_errpages/405.html
