feat: default index and simple redirection

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -24,7 +24,7 @@ server {
     }
 
     location /old-page/ {
-        return 301 http://google.com
+        return 301 http://localhost:8080/example_files/index.html
     }
 
     location /public/ {
