--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -8,6 +8,7 @@ server {
     cgiPath /path/to/python
     errorPage 405 example_files/custom_errpages/405.html
     errorPage 404 example_files/custom_errpages/404.html
+    uploadPath /example_files/uploads/
 
     location /example_files/ {
         allowedMethods GET POST
