fix: bind hostPortPair to listenFD, check if pathWithRoot not empty

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -56,19 +56,19 @@ server {
 
 server {
     listen localhost:8084
-    serverNames example.com wp.pl
+    serverNames localhost
 
-    location /diff {
+    location /diff/ {
         allowedMethods GET POST
-        root /ex/diff
+        root /example_files/
         index index.html
     }
 
-    location /diff2 {
+    location /diff2/ {
         return 301 http://google.com
     }
 
-    location /diff3 {
+    location /diff3/ {
         root /exam
         autoindex on
     }
