--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,13 +1,13 @@
 server {
     listen 127.0.0.1:8080
     listen 0.0.0.0:8082
-    serverNames 127.0.0.1
+    serverNames 127.0.0.1 localhost
     root /
     autoindex on
     allowedMethods GET POST
     cgiPath /path/to/python
     errorPage 405 example_files/custom_errpages/405.html
-    errorPage 404 example_files/custom_errpages/404.html
+    # errorPage 404 example_files/custom_errpages/404.html
     uploadPath /example_files/uploads/
 
     location /example_files/ {
