fix: ensure getReq skips folders and verifies complete data delivery via send()

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -8,7 +8,7 @@ server {
     cgiPath /path/to/python
     errorPage 405 example_files/custom_errpages/405.html
     # errorPage 404 example_files/custom_errpages/404.html
-    uploadPath /example_files/uploads/
+    uploadPath example_files/uploads/
 
     location /example_files/ {
         allowedMethods GET POST
@@ -16,12 +16,14 @@ server {
         index index.html
         cgiAllowedExtensions .py
         autoindex on
+        # maxBodySize 2
     }
 
     location / {
         allowedMethods GET POST
         cgiAllowedExtensions .py
         root /example_files/
+        index index.html
     }
 
     location /old-page/ {
