--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -5,10 +5,10 @@ server {
     root /
     autoindex on
     allowedMethods GET POST
-    cgiPath /path/to/python
+    cgiPath /usr/bin/python3
     errorPage 405 example_files/custom_errpages/405.html
-    # errorPage 404 example_files/custom_errpages/404.html
-    uploadPath /example_files/uploads/
+    errorPage 404 example_files/custom_errpages/404.html
+    uploadPath example_files/uploads/
 
     location /example_files/ {
         allowedMethods GET POST
