refactor: simplify parsing logic in Config.cpp and setting default values in RequestHandler.cpp

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -3,9 +3,9 @@ server {
     listen 0.0.0.0:8082
     serverNames 127.0.0.1 localhost
     root /
-    autoindex on
+    autoindex off
     allowedMethods GET POST
-    cgiPath /usr/bin/python3
+    cgiPathPython /usr/bin/python3
     errorPage 405 example_files/custom_errpages/405.html
     # errorPage 404 example_files/custom_errpages/404.html
     uploadPath example_files/uploads/
@@ -13,9 +13,9 @@ server {
     location /example_files/ {
         allowedMethods GET POST
         root /example_files/
-        index index.html
+        # index index.html
         cgiAllowedExtensions .py
-        autoindex on
+        # autoindex on
         # maxBodySize 2
     }
 
