fix: cgi handling

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -15,7 +15,7 @@ server {
         root /example_files/
         # index index.html
         cgiAllowedExtensions .py
-        # autoindex on
+        autoindex on
         # maxBodySize 2
     }
 
