fix: max_body_size check and redirect return

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -6,6 +6,7 @@ server {
     autoindex off
     allowedMethods GET POST
     cgiPathPython /usr/bin/python3
+	cgiPathPhp /usr/bin/php
     errorPage 405 example_files/custom_errpages/405.html
     # errorPage 404 example_files/custom_errpages/404.html
     uploadPath example_files/uploads/
@@ -14,7 +15,7 @@ server {
         allowedMethods GET POST
         root /example_files/
         # index index.html
-        cgiAllowedExtensions .py
+        cgiAllowedExtensions .py .php
         autoindex on
         # maxBodySize 2
     }
@@ -42,7 +43,7 @@ server {
 
     location / {
         allowedMethods GET POST
-        root /example_files
+        root /example_files/
         index index.html
     }
 
