docs: add docs to headers; amend example files

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -1,23 +1,22 @@
 server {
     listen 127.0.0.1:8080
-    listen 0.0.0.0:8082
-    serverNames 127.0.0.1 localhost
-    root /
+    listen 0.0.0.0:8081
+    serverNames 127.0.0.1
+    root /example_files/
     autoindex off
+    index index.html
     allowedMethods GET POST
     cgiPathPython /usr/bin/python3
-	cgiPathPhp /usr/bin/php
+	  cgiPathPhp /usr/bin/php
     errorPage 405 example_files/custom_errpages/405.html
     # errorPage 404 example_files/custom_errpages/404.html
     uploadPath example_files/uploads/
 
-    location /example_files/ {
+    location /route/ {
         allowedMethods GET POST
         root /example_files/
-        # index index.html
+        index index2.html
         cgiAllowedExtensions .py .php
-        autoindex on
-        # maxBodySize 2
     }
 
     location / {
@@ -28,17 +27,19 @@ server {
     }
 
     location /old-page/ {
-        return 301 http://localhost:8080/example_files/index.html
+        return 301 http://google.com/
     }
 
     location /public/ {
-        root /example_files/
+        root f
+        allowedMethods GET POST DELETE
         autoindex on
+        # maxBodySize 2
     }
 }
 
 server {
-    listen 0.0.0.0:8081
+    listen localhost:8082
     serverNames localhost
 
     location / {
@@ -48,31 +49,6 @@ server {
     }
 
     location /old-page {
-        return 301 http://google.com
-    }
-
-    location /public {
-        root /example_files
-        autoindex on
-    }
-}
-
-server {
-    listen localhost:8084
-    serverNames localhost
-
-    location /diff/ {
-        allowedMethods GET POST
-        root /example_files/
-        index index.html
-    }
-
-    location /diff2/ {
-        return 301 http://google.com
-    }
-
-    location /diff3/ {
-        root /exam
-        autoindex on
+        return 301 http://wp.pl
     }
 }
