fix[minor]: route in config

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -31,7 +31,7 @@ server {
     }
 
     location /public/ {
-        root f
+        root /example_files/public/
         allowedMethods GET POST DELETE
         autoindex on
         # maxBodySize 2
