fix: autoindex and redirection codes

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -52,3 +52,43 @@ server {
         return 301 http://wp.pl
     }
 }
+
+server {
+    listen 127.0.0.1:8084
+    serverNames 127.0.0.1
+    root /example_files/
+    autoindex on
+    index index.html
+    allowedMethods GET POST
+    cgiPathPython /usr/bin/python3
+	cgiPathPhp /usr/bin/php
+    errorPage 405 example_files/custom_errpages/405.html
+    errorPage 404 example_files/custom_errpages/404.html
+    errorPage 400 example_files/custom_errpages/400.html
+    uploadPath example_files/uploads/
+
+    location /route/ {
+        allowedMethods GET POST
+        root /example_files/
+        index index2.html
+        cgiAllowedExtensions .py .php
+    }
+
+    location / {
+        allowedMethods GET POST
+        cgiAllowedExtensions .py
+        root /
+        index example_files/main.html
+    }
+
+    location /mum's_friend's_son/ {
+        return 303 https://chatgpt.com/
+    }
+
+    location /public/ {
+        root /example_files/public/
+        allowedMethods GET POST DELETE
+        autoindex on
+        # maxBodySize 2
+    }
+}
