fix: cgi, maxbodysize; added htmls for testing

--- a/example_files/webserv.conf
+++ b/example_files/webserv.conf
@@ -7,7 +7,7 @@ server {
     index index.html
     allowedMethods GET POST
     cgiPathPython /usr/bin/python3
-	  cgiPathPhp /usr/bin/php
+	cgiPathPhp /usr/bin/php-cgi
     errorPage 405 example_files/custom_errpages/405.html
     # errorPage 404 example_files/custom_errpages/404.html
     uploadPath example_files/uploads/
@@ -61,11 +61,12 @@ server {
     index index.html
     allowedMethods GET POST
     cgiPathPython /usr/bin/python3
-	  cgiPathPhp /usr/bin/php
+	cgiPathPhp /usr/bin/php-cgi
     errorPage 405 example_files/custom_errpages/405.html
     errorPage 404 example_files/custom_errpages/404.html
     errorPage 400 example_files/custom_errpages/400.html
     uploadPath example_files/uploads/
+	maxBodySize 5000
 
     location /route/ {
         allowedMethods GET POST
@@ -76,7 +77,7 @@ server {
 
     location / {
         allowedMethods GET POST
-        cgiAllowedExtensions .py
+        cgiAllowedExtensions .py .php
         root /
         index example_files/main.html
     }
